Add support for Modern Industrialization
Also fix bug for processing multi outputs with fluids